css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

footer {
  font-family: 'Times New Roman', Times, serif !important;
}

footer a {
  padding: 0;
  margin: 0;
}

body {
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-image: url(/images/khu-du-lich-viet-nam-1.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.container {
  width: clamp(600px, 85vw, 1200px);
  margin: 0 auto;
  background-color: #DCEFFF;
  min-height: 100vh;
  box-shadow: 0 0 20px rgba(0, 0, 0, .5);
  transition: width .2s ease;
  padding-bottom: 20px;
}

header {
  background-color: transparent;
}

main {
  background-color: transparent;
  font-size: clamp(.95rem, 1.2vw, 1.15);
}

#home-img {
  width: 90%;
  display: block;
  margin: auto;
  margin-bottom: 2.5%;
}

h2 {
  font-family: "Oswald", sans-serif;
}

li {
  flex-shrink: 1;
}

h1 {
  text-align: center;
  font-family: "Cinzel", serif;
}

p {
  line-height: clamp(1.5, 1.7, 1.9);
}

a {
  text-decoration: none;
}

a:visited {
  color: purple;
}

ul {
  width: 100%;
}

header img {
  display: block;
  margin: 0 auto;
}

nav {
  background-color: #DCEFFF;
  width: 100%;
  display: inline-flex;
  flex-direction: row;
  font-family: "Oswald",sans-serif;
}

nav ul {
  display: flex;
  list-style-type: none;
  flex-direction: row;
  flex-wrap: wrap;
}

nav li {
  padding: 0;
  flex: 1;
}

nav a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  padding: clamp(20px, 1.3vw, 30px);
  color: darkblue;
  transition: background-color .3s ease,
              color .3s ease;
}

nav a:hover {
  background-color: rgb(135, 214, 243);
}


.hero {
  position: relative;
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, .4);
}

.hero img {
  width: 100%;
  display: block;
  overflow: hidden;
  aspect-ratio: 16/8;
  object-fit: cover;
}

.hero h1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: clamp(0.3rem, 1rem + 3vw, 2.5rem);
  text-align: center;
  overflow-y: auto;
  z-index: 1;
}



.welcome {
  font-size: clamp(0.8rem, 1.5vw, 2rem);
  background-color: #FDFCF9;
  margin: 1.5rem;
  border: 0.2rem solid #D6EAF8;
  border-radius: 18px;
  margin-bottom: 0;
}

.welcome h2 {
  text-align: center;
  padding: clamp(1.3rem, 1.5vw, 2rem);
  font-weight: 600;
}

.welcome p {
  padding: 4%;
  padding-top: 0%;
  font-family: "New Tegomin", sans-serif;
  font-weight: 400;
  font-size: clamp(14px, 2vw, 22px);
}

.dest {
  text-align: center;
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 0.8rem;
  background-color: #FDFCF9;
  margin: 1.5rem;
  border: 0.2rem solid #D6EAF8;
  border-radius: 18px;
  font-family: "New Tegomin", sans-serif;
}

.dest img {
  border-radius: 18px;
  width: 100%;
}

figcaption {
  font-size: clamp(12px, 2vw, 18px);
}

#ptg-header {
  background-color: #FDFCF9;
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 0.8rem;
  margin: 1.5rem;
  border: 0.2rem solid #D6EAF8;
  border-radius: 18px;
  font-family: "Playfair Display", sans-serif;
  font-weight: 600;
}

#ptg-header h2 {
  font-weight: 800;
}

#ptg-grid-container {
  margin: 0 1.5rem;
  background-color: #FDFCF9;
  padding: 1.5rem;
  border-radius: 18px;
}

#ptg-grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(0,1fr));
  gap: clamp(10px, 2vw, 24px);
  justify-content: center;
  align-items: center;
}

#ptg-grid img:nth-child(5) {
  border-radius: 11rem;
}

#ptg-grid img {
  width: 100%;
  display: block;
  height: auto;
  border-radius: 18px;
  border: 4px solid rgb(134, 215, 242);
}

#skip {
  display: block;
  position: absolute;
  left: -9999px;
  width: fit-content;
  padding: 10px;
  background-color: lightblue;
  text-decoration: none;
  z-index: 100;
}

#skip:hover {
  background-color: blue;
  color: white;
}

#skip:focus {
  left: 10px;
  top: 10px;
}

@media (max-width: 800px) {
  .container {
    width: 100%;
  }

  #ptg-grid {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

@media (max-width: 600px) {
  .hero h1 {
    font-size: 1rem;
  }

  #ptg-grid {
    grid-template-columns: 1fr;
  }
  
  h2, p {
    font-size: 1rem;
  }
}

